--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,20 @@ classifiers = [
 ]
 dependencies = [
     "ruff == 0.1.7",
-    "pytest==7.4.3", 
-    "numpy==1.26.1",
-    "pandas==2.2.0"
+    "pytest==7.4.3",
+    "numpy==1.24.3",
+    "pandas==2.0.3",
+    "tqdm==4.66.1",
+    "matplotlib==3.7.1",
+    "Pillow==9.4.0",
+    "opencv-python==4.7.0.72",
+    "scipy==1.11.2",
+    "sqlite==3.41.2",
+    "torch==2.0.1",
+    "torchvision==0.15.2",
+    "scikit-learn==1.3.0",
+    "umap-learn==0.5.4",
+    "plotly==5.15.0"
 ]
 
 description = "A package implementing an image recommender"
